-- SQL dump generated using DBML (dbml-lang.org)
-- Database: PostgreSQL
-- Generated at: 2023-06-17T16:47:39.153Z

CREATE TABLE "raw_transactions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "date" timestamp,
  "type" VARCHAR(10),
  "exchange" VARCHAR(50),
  "asset" VARCHAR(50),
  "price" NUMERIC(32, 18),
  "amount" NUMERIC(32, 18),
  "cost_basis" NUMERIC(32, 18),
  "fee" NUMERIC(32, 18)
);

CREATE TABLE "buys" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "transaction_id" INT,
  "price" NUMERIC(32, 18),
  "amount" NUMERIC(32, 18),
  "cost_basis" NUMERIC(32, 18),
  "fee" NUMERIC(32, 18)
);

CREATE TABLE "sells" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "transaction_id" INT,
  "price" NUMERIC(32, 18),
  "amount" NUMERIC(32, 18),
  "cost_basis" NUMERIC(32, 18),
  "fee" NUMERIC(32, 18)
);

CREATE TABLE "transaction_pairs" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "filing_id" INT,
  "buy_id" INT,
  "sell_id" INT
);

CREATE TABLE "tax_filings" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "year" INT,
  "completed" boolean
);

COMMENT ON TABLE "raw_transactions" IS 'Transaction Data pulled from Exchange';

COMMENT ON TABLE "buys" IS 'Raw buy amounts are split into multiple transactions to pair with sells';

COMMENT ON TABLE "sells" IS 'Raw sell amounts are split into multiple transactions to pair with buys';

ALTER TABLE "buys" ADD FOREIGN KEY ("transaction_id") REFERENCES "raw_transactions" ("id");

ALTER TABLE "sells" ADD FOREIGN KEY ("transaction_id") REFERENCES "raw_transactions" ("id");

ALTER TABLE "transaction_pairs" ADD FOREIGN KEY ("filing_id") REFERENCES "tax_filings" ("id");

ALTER TABLE "transaction_pairs" ADD FOREIGN KEY ("buy_id") REFERENCES "buys" ("id");

ALTER TABLE "transaction_pairs" ADD FOREIGN KEY ("sell_id") REFERENCES "sells" ("id");
